working leaflet map

--- a/Model_development.ipynb
+++ b/Model_development.ipynb
@@ -1398,24 +1398,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "col = []\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "#     print(row.results)\n",
+    "    if (row.results == 'Pass w/ Conditions'):\n",
+    "        col.append(1)\n",
+    "    elif (row.results == 'Pass'):\n",
+    "        col.append(1)\n",
+    "    elif (row.results == 'Fail'):\n",
+    "        col.append(0)\n",
+    "    else:\n",
+    "        col.append(3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['binary_results'] = col"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('model_results_full.csv',encoding='utf-8',index=False)"
+   ]
   },
   {
    "cell_type": "code",
